tests/bad/assign0.tig
let var N := 8 in
  for i := 0 to N - 1 do (
    i := 4;
    print("\n")
  )
end
